--- a/meeee/index.html
+++ b/meeee/index.html
@@ -7,10 +7,11 @@
 </head>
 <body>
 	<section id='content'>
-	   <h1>[My Name]</h1>
-	   <h2>[My year and Major]</h2>
-	   <p>[My Goals for the semester]</p>
+	   <h1>Douglas Monteiro</h1>
+	   <h2>Junior, Graphic Design</h2>
+	   <p>grasp the basic idea of HTML, CSS & JS</p>
 	</section>
 	
 </body>
 </html>
+
