--- a/yum/index.html
+++ b/yum/index.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html>
-  <head>	
-	
-	<title>yum!</title>
-  	<!--[if lt IE 9]>
-  	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  	<![endif]-->
-  	<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
+  <head>		
+	<title><em>lemony</em> yum!</title> 
   </head>
+  <header>lemon pasta salad <em>with tomatoes and feta</em></header>
   <body>
-	<!-- This is where your page content goes-->
+	  <section>
+		  <article>
+		  7 tablespoon extra-virgin olive oil
+		  4 tablespoon fresh lemon juice
+		  3 tablespoon whole grain mustard
+		  2 garlic cloves, minced
+		  2 teaspoon grated lemon peel
+		  12 ounces penne pasta
+		  2 cups small cherry tomatoes, halved
+		  1½ cups chopped red bell peppers
+		  1½ cups crumbled feta cheese
+		  1 cup chopped green onions
+		  </article>
+	  	  <article>
+	  <em>whisk</em> oil, lemon juice, mustard, garlic, and lemon peel in small bowl to blend. Season dressing with salt and pepper.
+	  <em>cook</em> penne in large pot of boiling salted water until tender but still firm to bite.
+	  <em>drain</em> pasta then rinse pasta with cold water to cool quickly and drain again; transfer pasta to large bowl. Add tomatoes, bell peppers, feta cheese,and green onions.
+	  <em>pour</em> dressing over and toss to coat. Season to taste with salt and pepper.  
+	  	  </article>
+  	 </section>
   </body>
 </html>
