--- a/homework/index.html
+++ b/homework/index.html
@@ -11,7 +11,7 @@
 		<h2>Meee!</h2>
 				<p><a href='http://dfmonteiro2.github.io/meeee/'>My meeee page!</a></p>
 		<h2>Yum</h2>
-				<p>Add your link(s) Here</p>
+				<p> <a href='dfmonteiro2.github.io/yum/index.html'></p>
 		<h2>Cats vs Dogs</h2>
 				<p>Add your link(s) Here</p>
 		<h2>Wireframes</h2>
