--- a/homework/index.html
+++ b/homework/index.html
@@ -9,11 +9,11 @@
 	<section id='content'>
 		<h1>Doug's Homework</h1>
 		<h2>Meee!</h2>
-				<p><a href='http://dfmonteiro2.github.io/meeee/'>My meeee page!</a></p>
+				<p><a href="http://dfmonteiro2.github.io/meeee/">My meeee page!</a></p>
 		<h2>Yum</h2>
-				<p> <a href='dfmonteiro2.github.io/yum/index.html'></p>
+				<p> <a href= "http://dfmonteiro2.github.io/yum/">My yum page!</a></p>
 		<h2>Cats vs Dogs</h2>
-				<p>Add your link(s) Here</p>
+				<p><a  href="http://dfmonteiro2.github.io/cats-vs-dogs/">My cats vs dogs page!</a></p>
 		<h2>Wireframes</h2>
 				<p>Add your link(s) Here</p>
 		<h2>Llama Love</h2>
