--- a/meeee/index.html
+++ b/meeee/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen">
 </head>
 <body>
+	<img src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xap1/v/t1.0-9/1459672_1503842179840193_2030686136_n.jpg?oh=805776447c4e52e2f8b5a877ce0f2432&oe=54C27E10&__gda__=1418679112_db88cebcbe054d4a8739aa296fb3609a" alt="Doug">
 	<section id='content'>
 	   <h1>Douglas Monteiro</h1>
 	   <h2>Junior, Graphic Design</h2>
