--- a/meeee/index.html
+++ b/meeee/index.html
@@ -11,6 +11,7 @@
 	   <h1>Douglas Monteiro</h1>
 	   <h2>Junior, Graphic Design</h2>
 	   <p>grasp the basic idea of HTML, CSS & JS</p>
+	   <a href="https://mail.google.com/">dfmonteiro@massart.edu email</a>
 	</section>
 	
 </body>
