--- a/yum/index.html
+++ b/yum/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>		
-	<title><em>lemony</em> yum!</title> 
+	<title>lemony yum!</title> 
   </head>
   <header>lemon pasta salad <em>with tomatoes and feta</em></header>
+	<img  src="pics/10_recipes_Page_01.jpg" alt="recipe #1">
 	  <section>
 		  <article>
 		  7 tablespoon extra-virgin olive oil
