--- a/cats-vs-dogs/index.html
+++ b/cats-vs-dogs/index.html
@@ -8,39 +8,41 @@
   <body id="body">
 	  <header>
 		  <h1 id="site-header">
-			  <a href="google.com">Dog vs. Cats </a>
+			  <img src="images/dogvscat-logo.gif" alt="logo" width="300px">
 		  </h1>
 	  </header>
-
-	  <hr/>
-	  <nav id="nav">
+	  
+	 <hr>
+	  	<nav id="nav">
 		  <ul>
-			  <li>PHOTOS</li>
-			  <li>ABOUT</li>
-			  <li>SUBMIT</li>
-			  <li>BLOG</li>
-			  <li>CONTACT</li>
+			  <li>Photos</li>
+			  <li>About</li>
+			  <li>Submit</li>
+			  <li>Blog</li>
+			  <li>Contact</li>
 	  	  </ul>
-	  </nav>
-	 <hr/>
-	 
+	  	</nav>
+	 <hr>
+	 	
 	 <article id="article1">
-		  <img src="images/stoned-dog.jpg" alt="funny dog">
-		  <h1>Dogs Have Better Noses</h1>
+		 <img src="images/stoned-dog.jpg" alt="funny dog" width="380px" height="300px">
+		 <h1>Dogs Have Better Noses</h1>
 		  	<p>Dogs can discriminate odors at concentrations nearly 100 million times lower than humans can. The wet nose is essential for determining the direction of the air current containing the smell. Cold receptors in the skin are sensitive to the cooling of the skin by evaporation of the moisture by air currents.
 			</p>
 	  </article>
 	  
 	  <article id="article2">
-		  <img src="images/images.jpg" alt="Ugly cat">
+		  <img src="images/images.jpg" alt="Ugly cat" width="380px" height="300px">
 		  <h1>Cats Have Better Tongues</h1>
 		  	<p>Cats are known for their cleanliness, spending many hours licking their coats. The cat's tongue has backwards-facing spines about 500 micrometers long, which are called papillae. These are quite rigid, as they contain keratin. These spines allow cats to groom themselves by licking their fur, with the rows of papillae acting like a hairbrush.
 			</p>
 	  </article>  
-   
-    <footer>
-	  <div>images and copy from <span>wiki commons</span></div>
-	  <div>copyright ©2011 <span>martha rettig</span></div>
+	  
+	  <hr id="bottom-footer">
+	  
+    <footer id="footer">
+	  <div id="wiki">images and copy from <span>wiki commons</span></div>
+	  <div id="martha">copyright ©2011 <span>martha rettig</span></div>
 	</footer>
   </body>
 </html>
