--- a/yum/index.html
+++ b/yum/index.html
@@ -2,27 +2,49 @@
 <html>
   <head>		
 	<title>lemony yum!</title> 
+	<link rel="stylesheet" type="text/css" href="style.css"/>
   </head>
-  <img  src="pics/10_recipes_Page_01.jpg" alt="recipe #1">
-  <header>lemon pasta salad <em>with tomatoes and feta</em></header>
-
-		  <article>
-		  7 tablespoon extra-virgin olive oil
-		  4 tablespoon fresh lemon juice
-		  3 tablespoon whole grain mustard
-		  2 garlic cloves, minced
-		  2 teaspoon grated lemon peel
-		  12 ounces penne pasta
-		  2 cups small cherry tomatoes, halved
-		  1½ cups chopped red bell peppers
-		  1½ cups crumbled feta cheese
-		  1 cup chopped green onions
-		  </article>
-	  	  <article>
-	  <em>whisk</em> oil, lemon juice, mustard, garlic, and lemon peel in small bowl to blend. Season dressing with salt and pepper.
-	  <em>cook</em> penne in large pot of boiling salted water until tender but still firm to bite.
-	  <em>drain</em> pasta then rinse pasta with cold water to cool quickly and drain again; transfer pasta to large bowl. Add tomatoes, bell peppers, feta cheese,and green onions.
-	  <em>pour</em> dressing over and toss to coat. Season to taste with salt and pepper.  
-	  	  </article>
-  	 </section>
+  
+  <body>
+	  <section id="image">
+		  <img src="pics/10_recipes_Page_01.jpg" alt="recipe">
+	  </section>
+  	  	  
+	  <section id="content">
+  		<div id="serving">Serves 8</div>
+		
+		  <h1 id="title">lemon pasta salad </h1>
+	  	  <h1 id="serif">with tomatoes and feta </h1>
+		 
+		 <article id="ingredients1">
+		  <ul>
+			  <li>7 tablespoon extra-virgin olive oil</li>
+			  <li>4 tablespoon fresh lemon juice</li>
+			  <li>3 tablespoon whole grain mustard</li>
+			  <li>2 garlic cloves, minced</li>
+			  <li>2 teaspoon grated lemon peel</li>
+		  	  <li>12 ounces penne pasta</li>
+	      </ul>
+	  	</article>
+		<article id="ingredients2">
+		  <ul>
+			  <li>2 cups small cherry tomatoes, halved</li>
+		  	  <li>1½ cups chopped red bell peppers</li>
+		      <li>1½ cups crumbled feta cheese</li>
+		  	  <li>1 cup chopped green onions</li>
+		  </ul>
+	  </article>
+		  
+		  <article id="directions">
+	  		<p id="left"><em>whisk</em>  oil, lemon juice, mustard, garlic, and lemon peel in small bowl to blend. Season dressing with salt and pepper.<br><br>
+	  <em>cook</em> penne in large pot of boiling salted water until tender but still firm to bite.<br><br>
+	  <em>drain</em> pasta then rinse pasta with cold water to cool quickly and drain again; 
+  	  		</p>
+	  
+	  	  	<p id="right">transfer pasta to large bowl. Add tomatoes, bell peppers, feta cheese,<br>and green onions.<br><br>
+	  <em>pour</em> dressing over and toss to coat. Season to taste with salt and pepper.
+  	  		</p>
+  		</article>
+  	</section>
+  </body>
 </html>
