--- a/cats-vs-dogs/index.html
+++ b/cats-vs-dogs/index.html
@@ -16,9 +16,13 @@
 	  	<nav id="nav">
 		  <ul>
 			  <li>Photos</li>
+			  <li>&bull;</li>
 			  <li>About</li>
+			  <li>&bull;</li>
 			  <li>Submit</li>
+			  <li>&bull;</li>
 			  <li>Blog</li>
+			  <li>&bull;</li>
 			  <li>Contact</li>
 	  	  </ul>
 	  	</nav>
