--- a/cats-vs-dogs/index.html
+++ b/cats-vs-dogs/index.html
@@ -3,6 +3,8 @@
   <head>
 	  <title>dogs vs cats</title>
 	  <link rel="stylesheet" type="text/css" href="reset.css"/>
+  	  <link rel="stylesheet" type="text/css" href="responsive.css" media="screen and (max-width:900px)"/>
+  
   </head>
   
   <body id="body">
@@ -12,31 +14,31 @@
 		  </h1>
 	  </header>
 	  
-	 <hr>
+<hr>
 	  	<nav id="nav">
 		  <ul>
 			  <li>Photos</li>
-			  <li>&bull;</li>
+			  <li class="bullet">&bull;</li>
 			  <li>About</li>
-			  <li>&bull;</li>
-			  <li>Submit</li>
-			  <li>&bull;</li>
+			  <li class="bullet">&bull;</li>
+			  <li >Submit</li>
+			  <li class="bullet">&bull;</li>
 			  <li>Blog</li>
-			  <li>&bull;</li>
+			  <li class="bullet">&bull;</li>
 			  <li>Contact</li>
 	  	  </ul>
 	  	</nav>
-	 <hr>
+<hr>
 	 	
 	 <article id="article1">
-		 <img src="images/stoned-dog.jpg" alt="funny dog" width="380px" height="300px">
+		 <img src="images/unnamed.jpg" alt="funny dog" width="380px" height="300px">
 		 <h1>Dogs Have Better Noses</h1>
 		  	<p>Dogs can discriminate odors at concentrations nearly 100 million times lower than humans can. The wet nose is essential for determining the direction of the air current containing the smell. Cold receptors in the skin are sensitive to the cooling of the skin by evaporation of the moisture by air currents.
 			</p>
 	  </article>
 	  
 	  <article id="article2">
-		  <img src="images/images.jpg" alt="Ugly cat" width="380px" height="300px">
+		  <img src="images/Cute Kitty photos 1440 x 1280.jpg" alt="Ugly cat" width="380px" height="300px">
 		  <h1>Cats Have Better Tongues</h1>
 		  	<p>Cats are known for their cleanliness, spending many hours licking their coats. The cat's tongue has backwards-facing spines about 500 micrometers long, which are called papillae. These are quite rigid, as they contain keratin. These spines allow cats to groom themselves by licking their fur, with the rows of papillae acting like a hairbrush.
 			</p>
