--- a/wireframes/index.html
+++ b/wireframes/index.html
@@ -5,18 +5,18 @@
   </head>
   <body>
 
- <img src="jpegs/ABOUT.jpg" alt="funny dog" width="380px" height="300px">
- <img src="jpegs/DESIGN.jpg" alt="funny dog" width="380px" height="300px">
- <img src="jpegs/FARMERS-MARKET.jpg" alt="funny dog" width="380px" height="300px">
- <img src="jpegs/FARMERS-MARKET-zoom.jpg" alt="funny dog" width="380px" height="300px">
- <img src="jpegs/FILM.jpg" alt="funny dog" width="380px" height="300px">
+ <img src="jpegs/ABOUT.jpg" alt="funny dog" width="800px">
+ <img src="jpegs/DESIGN.jpg" alt="funny dog" width="800px">
+ <img src="jpegs/FARMERS-MARKET.jpg" alt="funny dog" width="800px">
+ <img src="jpegs/FARMERS-MARKET-zoom.jpg" alt="funny dog" width="800px">
+ <img src="jpegs/FILM.jpg" alt="funny dog" width="800px">
  <br> 
  <br>
  <br>
- <img src="jpegs/iphoneABOUT.jpg" alt="funny dog" width="380px" height="300px">
- <img src="jpegs/iphoneDESIGN.jpg" alt="funny dog" width="380px" height="300px">
- <img src="jpegs/iphonePOSTER.jpg" alt="funny dog" width="380px" height="300px">
-  <img src="jpegs/iphonePOSTERinfo.jpg" alt="funny dog" width="380px" height="300px">
+ <img src="jpegs/iphoneABOUT.jpg" alt="funny dog" width="400px">
+ <img src="jpegs/iphoneDESIGN.jpg" alt="funny dog" width="400px">
+ <img src="jpegs/iphonePOSTER.jpg" alt="funny dog" width="400px">
+ <img src="jpegs/iphonePOSTERinfo.jpg" alt="funny dog" width="400px">
 
   </body>
 </html>
