--- a/wireframes/Video.html
+++ b/wireframes/Video.html
@@ -9,24 +9,20 @@
   
   <body id="body">
 	  <header>
-		  <h1 id="site-header">
-			  <img src="images/dogvscat-logo.gif" alt="logo" width="300px">
-		  </h1>
+		  <h1 id="logo"> DM</h1>
 	  </header>
-	  
 <hr>
 	  	<nav id="nav">
 		  <ul>
-			  <li>Photos</li>
-			  <li class="bullet">&bull;</li>
 			  <li>About</li>
-			  <li class="bullet">&bull;</li>
-			  <li >Submit</li>
-			  <li class="bullet">&bull;</li>
-			  <li>Blog</li>
-			  <li class="bullet">&bull;</li>
+			  <li>Design</li>
+			  <li>Film</li>
+			  <li>Resume</li>
 			  <li>Contact</li>
 	  	  </ul>
 	  	</nav>
 <hr>
-	 	
+   	 <article id="film">  		
+		<img src="portfolio-pictures/MJ-Dance.jpg"> 		
+		<h1>MJ DANCE MOVES</h1>
+   	  </article>
