--- a/homework/index.html
+++ b/homework/index.html
@@ -15,9 +15,13 @@
 		<h2>Cats vs Dogs</h2>
 				<p><a  href="http://dfmonteiro2.github.io/cats-vs-dogs/">My cats vs dogs page!</a></p>
 		<h2>Wireframes</h2>
-				<p>"http://dfmonteiro2.github.io/llama-love/"p>
+	<ul>
+		<p><a  href="http://dfmonteiro2.github.io/wireframes/about"> About</a></p>
+		<p><a  href="http://dfmonteiro2.github.io/wireframes/FarmersMarket">Poster</a></p>
+		<p><a  href="http://dfmonteiro2.github.io/wireframes/EndengeredSpecies">Stamps</a></p>
+	</ul>	
 		<h2>Llama Love</h2>
-				<p>Add your link(s) Here</p>
+				<p>"http://dfmonteiro2.github.io/llama-love/"</p>
 		<h2>Robots</h2>
 		    	<p>Add your link(s) Here</p>
 		<h2>Final Project</h2>
