--- a/homework/index.html
+++ b/homework/index.html
@@ -16,9 +16,11 @@
 				<p><a  href="http://dfmonteiro2.github.io/cats-vs-dogs/">My cats vs dogs page!</a></p>
 		<h2>Wireframes</h2>
 	<ul>
-		<p><a  href="http://dfmonteiro2.github.io/wireframes/about"> About</a></p>
-		<p><a  href="http://dfmonteiro2.github.io/wireframes/FarmersMarket">Poster</a></p>
-		<p><a  href="http://dfmonteiro2.github.io/wireframes/EndengeredSpecies">Stamps</a></p>
+		<p><a  href="http://dfmonteiro2.github.io/wireframes/about/"> About</a></p>
+		<p><a  href="http://dfmonteiro2.github.io/wireframes/FarmersMarket/">Poster</a></p>
+		<p><a  href="http://dfmonteiro2.github.io/wireframes/EndengeredSpecies/">Stamps</a></p>
+		<p><a  href="http://dfmonteiro2.github.io/wireframes/Video/"> Video</a></p>
+		
 	</ul>	
 		<h2>Llama Love</h2>
 				<p>"http://dfmonteiro2.github.io/llama-love/"</p>
