--- a/wireframes/about.html
+++ b/wireframes/about.html
@@ -15,7 +15,15 @@
 	  	<nav id="nav">
 		  <ul>
 			  <li>About</li>
-			  <li>Design</li>
+			  <li>Design
+			  	<ul>
+					<li>Advocacy Poster Series</li>
+					<li>Wayfinding</li>
+					<li>Endengered Animals Series</li>
+					<li>Allure</li>
+					<li>Bradbury Thompson</li>
+					<li>Typeface Comparison </li>
+			  	</ul></li>
 			  <li>Film</li>
 			  <li>Resume</li>
 			  <li>Contact</li>
