--- a/wireframes/FarmersMarket.html
+++ b/wireframes/FarmersMarket.html
@@ -4,6 +4,24 @@
 	  <title>Douglas Monteiro</title>
 	  <link rel="stylesheet" type="portfolio/css" href="reset.css"/>
   	  <link rel="stylesheet" type="portfolio/css" href="responsive.css" media="screen and (max-width:900px)"/>
+
+  <!-- Add jQuery library -->
+  <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+
+  <!-- Add mousewheel plugin (this is optional) -->
+  <script type="text/javascript" src="fancybox/lib/jquery.mousewheel-3.0.6.pack.js"></script>
+
+  <!-- Add fancyBox -->
+  <link rel="stylesheet" href="fancybox/source/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen" />
+  <script type="text/javascript" src="fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
+
+  <!-- Optionally add helpers - button, thumbnail and/or media -->
+  <link rel="stylesheet" href="fancybox/source/helpers/jquery.fancybox-buttons.css?v=1.0.5" type="text/css" media="screen" />
+  <script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-buttons.js?v=1.0.5"></script>
+  <script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-media.js?v=1.0.6"></script>
+
+  <link rel="stylesheet" href="fancybox/source/helpers/jquery.fancybox-thumbs.css?v=1.0.7" type="text/css" media="screen" />
+  <script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
   
   </head>
   
@@ -14,19 +32,34 @@
 <hr>
 	  	<nav id="nav">
 		  <ul>
-			  <li>About</li>
-			  <li>Design</li>
-			  <li>Film</li>
-			  <li>Resume</li>
-			  <li>Contact</li>
-	  	  </ul>
+		  <li>About</li>
+		  <li>Design
+	  		<ul>	
+				<li>Advocacy Poster Series</li>
+				<li>Wayfinding</li>
+				<li>Endengered Animals Series</li>
+				<li>Allure</li>
+				<li>Bradbury Thompson</li>
+				<li>Typeface Comparison </li>
+		   	</ul></li>
+		  <li>Film</li>
+		  <li>Resume</li>
+		  <li>Contact</li>
+	      </ul>
 	  	</nav>
 <hr>
    	 <article id="farmers market">
   		<h1>Farmers Market</h1>
 		<p>Lorem ipsum enisiminctis molor soluptate net es que cusapic tecte volores equatis as re, volumfugit estrum aut moluptatiam nis ne sed quatem acesed que porerundam excepratem illaut vitem la cone vellam dendist essin peliam fugitio officiae od que conem represt rem doluptur, nonem etur sae sequodi onsendist velluptam, sam veleni rempe nimpostio exerro to velessu ntotat volupta sum, vel molupti busandebis nis maio. Et que niscit officaborit aute cum inctur sed quosant lab id etur? Qui omnisquisi audaere rnatia sunt utati verchilit ad quiassi iunti debisin tisqui aceario. </p>
 
-		<img src="portfolio-pictures/monteiro.douglas-poster1.jpg"> 		<img src="portfolio-pictures/monteiro.douglas-poster2.jpg">
-		<img src="portfolio-pictures/monteiro.douglas-poster3.jpg" >
+		<a class="fancybox" rel="group" href="portfolio-pictures/monteiro.douglas-poster1.jpg"><img src="portfolio-pictures/thumb1.jpg" alt="" /></a>
+		<a class="fancybox" rel="group" href="portfolio-pictures/monteiro.douglas-poster2.jpg"><img src="portfolio-pictures/thumb2.jpg" alt="" /></a>
+
 
    	  </article>
+	  
+	  <script type="text/javascript">
+	  	$(document).ready(function() {
+	  		$(".fancybox").fancybox();
+	  	});
+	  </script>
