--- a/final/PortfolioVideo.html
+++ b/final/PortfolioVideo.html
@@ -1,4 +1,49 @@
 <!DOCTYPE html>
 <html>
-	
+	<!DOCTYPE html>
+	<html>
+	<head>
+		<title>Douglas Monteiro</title>
+		<link rel="stylesheet" type="text/css" href="Portfolio.css"/>
+		<link rel="stylesheet" type="text/css" href="responsive.css" media="screen and (max-width:900px)"/>
+	</head>
+
+	<body>
+
+	<header id="site-header">
+		<div id="header-center">
+			<div id="name">
+			  <a href="PortfolioAbout.html">d.f.monteiro</a>
+			</div>
+			<nav>
+			  <ul>
+				  <li><a href="PortfolioAbout.html">about</a></li>
+	  			  <li><a href="PortfolioDesign.html">design</a></li>
+				  <li><a href="PortfolioResume.html">resume</a></li>
+			  </ul>
+			</nav> 
+		</div>
+	</header> 
+
+	<div id="main">
+	/* ---Video Main--- */
+	</div>
+</body>  
+
+	<footer id="footer">
+			 <a href="https://www.behance.net/dfmonteiro"><img src="Icons/BehanceIcon.png" alt="BehanceIcon"></a>
+			 <a href="https://www.facebook.com/douglas.monteiro"><img src="Icons/FacebookIcon.png" alt="FacebookIcon"></a>
+			 <a href="http://instagram.com/douglas246/"><img src="Icons/InstagramIcon.png" alt="InstagramIcon"></a>
+			 <a href="https://twitter.com/dougmonteiro"><img src="Icons/TwitterIcon.png" alt="TwitterIcon"></a>
+			 <a href="https://www.linkedin.com/in/dougmonteiro"><img src="Icons/LinkedInIcon.png" alt="LinkedInIcon"></a>
+
+		  	  <div id="footer-text"><a href="mailto:dfmonteiro@massart.edu">dfmonteiro@massart.edu</a><br>+ 1(508)816-9003</div>
+ 		  
+			  <hr>
+ 	  	  
+			  <div id="copyright"> &copy; Douglas Monteiro 2014</div>
+	  
+	</footer>	
 </html>
+
+
