--- a/final/PortfolioDesign.html
+++ b/final/PortfolioDesign.html
@@ -19,7 +19,6 @@
 			  <ul>
 				  <li><a href="PortfolioAbout.html">about</a></li>
 	  			  <li><a href="PortfolioDesign.html">design</a></li>
-				  <li><a href="PortfolioVideo.html">video</a></li>
 				  <li><a href="PortfolioResume.html">resume</a></li>
 			  </ul>
 			</nav> 
@@ -27,20 +26,27 @@
 	</header> 
 
 	<div id="main">
+		
+	<a href="PortfolioFarmersMarket.html"><img class="design-img color_flip" src="images/ResumeIcons/FarmersMarket.jpg" alt="FarmersMarket"></a>
+	<a href="PortfolioBradburyThompson.html"><img class="design-img color_flip" src="images/ResumeIcons/Bradbury.jpg"></a>
+	<a href="PortfolioAllure.html"><img class="design-img color_flip" src="images/ResumeIcons/Allure.jpg"></a>
+	<a href="PortfolioAmtrak.html"><img class="design-img color_flip" src="images/ResumeIcons/TainTable.jpg"></a>
+	<a href="PortfolioStamps.html"><img class="design-img color_flip" src="images/ResumeIcons/Stamps.jpg"></a>
+	<a href="PortfolioLeftovers.html"><img class="design-img color_flip" src="images/ResumeIcons/Leftovers.jpg">	
+	<a href="PortfolioComparison.html"><img class="design-img color_flip" src="images/ResumeIcons/TypeComparison.jpg"></a>
+		<a href="PortfolioLetterCropping.html"><img class="design-img color_flip" src="images/ResumeIcons/Lettercropping.jpg"></a>
 	
-	/* ---main--- */
+	
 	
 	</div>
-	
-	
 </body>  
 
 	<footer id="footer">
-			 <img src="Icons/BehanceIcon.png" alt="BehanceIcon">
-			 <img src="Icons/FacebookIcon.png" alt="FacebookIcon">
-			 <img src="Icons/InstagramIcon.png" alt="InstagramIcon">
-			 <img src="Icons/TwitterIcon.png" alt="TwitterIcon">
-			 <img src="Icons/LinkedInIcon.png" alt="LinkedInIcon">
+			 <a href="https://www.behance.net/dfmonteiro"><img src="Icons/BehanceIcon.png" alt="BehanceIcon"></a>
+			 <a href="https://www.facebook.com/douglas.monteiro"><img src="Icons/FacebookIcon.png" alt="FacebookIcon"></a>
+			 <a href="http://instagram.com/douglas246/"><img src="Icons/InstagramIcon.png" alt="InstagramIcon"></a>
+			 <a href="https://twitter.com/dougmonteiro"><img src="Icons/TwitterIcon.png" alt="TwitterIcon"></a>
+			 <a href="https://www.linkedin.com/in/dougmonteiro"><img src="Icons/LinkedInIcon.png" alt="LinkedInIcon"></a>
 
 		  	  <div id="footer-text"><a href="mailto:dfmonteiro@massart.edu">dfmonteiro@massart.edu</a><br>+ 1(508)816-9003</div>
  		  
