--- a/final/PortfolioLetterCropping.html
+++ b/final/PortfolioLetterCropping.html
@@ -13,11 +13,11 @@
 	<header id="site-header">
 		<div id="header-center">
 			<div id="name">
-			  <a href="PortfolioAbout.html">d.f.monteiro</a>
+			  <a href="index.html">d.f.monteiro</a>
 			</div>
 			<nav>
 			  <ul>
-				  <li><a href="PortfolioAbout.html">about</a></li>
+				  <li><a href="index.html">about</a></li>
 	  			  <li><a href="PortfolioDesign.html">design</a></li>
 				  <li><a href="PortfolioResume.html">resume</a></li>
 			  </ul>
