--- a/final/index.html
+++ b/final/index.html
@@ -37,7 +37,7 @@
 </body>  
 
 	<footer id="footer">
-			 <a href="https://www.behance.net/dfmonteiro"><img src="Icons/BehanceIcon.png" alt="BehanceIcon"></a>
+			 <a href="https://www.behance.net/dfmonteiro" target="_blank"><img src="Icons/BehanceIcon.png" alt="BehanceIcon"></a>
 			 <a href="https://www.facebook.com/douglas.monteiro"><img src="Icons/FacebookIcon.png" alt="FacebookIcon"></a>
 			 <a href="http://instagram.com/douglas246/"><img src="Icons/InstagramIcon.png" alt="InstagramIcon"></a>
 			 <a href="https://twitter.com/dougmonteiro"><img src="Icons/TwitterIcon.png" alt="TwitterIcon"></a>
