--- a/final/PortfolioDesign.html
+++ b/final/PortfolioDesign.html
@@ -42,11 +42,11 @@
 </body>  
 
 	<footer id="footer">
-			 <a href="https://www.behance.net/dfmonteiro"><img src="Icons/BehanceIcon.png" alt="BehanceIcon"></a>
-			 <a href="https://www.facebook.com/douglas.monteiro"><img src="Icons/FacebookIcon.png" alt="FacebookIcon"></a>
-			 <a href="http://instagram.com/douglas246/"><img src="Icons/InstagramIcon.png" alt="InstagramIcon"></a>
-			 <a href="https://twitter.com/dougmonteiro"><img src="Icons/TwitterIcon.png" alt="TwitterIcon"></a>
-			 <a href="https://www.linkedin.com/in/dougmonteiro"><img src="Icons/LinkedInIcon.png" alt="LinkedInIcon"></a>
+			 <a href="https://www.behance.net/dfmonteiro" target="_blank"><img src="Icons/BehanceIcon.png" alt="BehanceIcon"></a>
+			 <a href="https://www.facebook.com/douglas.monteiro" target="_blank"><img src="Icons/FacebookIcon.png" alt="FacebookIcon"></a>
+			 <a href="http://instagram.com/douglas246/" target="_blank"><img src="Icons/InstagramIcon.png" alt="InstagramIcon"></a>
+			 <a href="https://twitter.com/dougmonteiro" target="_blank"><img src="Icons/TwitterIcon.png" alt="TwitterIcon"></a>
+			 <a href="https://www.linkedin.com/in/dougmonteiro" target="_blank"><img src="Icons/LinkedInIcon.png" alt="LinkedInIcon"></a>
 
 		  	  <div id="footer-text"><a href="mailto:dfmonteiro@massart.edu">dfmonteiro@massart.edu</a><br>+ 1(508)816-9003</div>
  		  
