--- a/final/PortfolioIphoneApp.html
+++ b/final/PortfolioIphoneApp.html
@@ -26,19 +26,13 @@
 	</header> 
 
 	<div id="main">
-		
-	<a href="PortfolioIphoneApp.html"><img class="design-img color_flip" src="images/ResumeIcons/IphoneApp.jpg"></a>
-	<a href="PortfolioFarmersMarket.html"><img class="design-img color_flip" src="images/ResumeIcons/FarmersMarket.jpg" alt="FarmersMarket"></a>
-	<a href="PortfolioBradburyThompson.html"><img class="design-img color_flip" src="images/ResumeIcons/Bradbury.jpg"></a>
-	<a href="PortfolioAllure.html"><img class="design-img color_flip" src="images/ResumeIcons/Allure.jpg"></a>
-	<a href="PortfolioAmtrak.html"><img class="design-img color_flip" src="images/ResumeIcons/TainTable.jpg"></a>
-	<a href="PortfolioStamps.html"><img class="design-img color_flip" src="images/ResumeIcons/Stamps.jpg"></a>
-	<a href="PortfolioLeftovers.html"><img class="design-img color_flip" src="images/ResumeIcons/leftovers.jpg"></a>
-	<a href="PortfolioComparison.html"><img class="design-img color_flip" src="images/ResumeIcons/TypeComparison.jpg"></a>
-		<a href="PortfolioLetterCropping.html"><img class="design-img color_flip" src="images/ResumeIcons/Lettercropping.jpg"></a>
-	
-	
-	
+		<h1>Amtrak Time Table Redesign</h1>
+		<br>
+		<img class="Train-img" src="images/LargeImages/TrainTable.jpg" alt="DouglasMonteiro">
+		<div id="body-text">
+			  <p>Subject to the Contributor who includes the Program by such Participant to You under this License Agreement. Any attempt otherwise to copy, distribute or change NetHack. <span id="small-caps">COPYING POLICIES</span> You may not alter or restrict the applicable version of this License shall be construed under the LPPL maintenance status 'maintained'.</p>
+
+		</div>
 	</div>
 </body>  
 
