--- a/final/PortfolioIphoneApp.html
+++ b/final/PortfolioIphoneApp.html
@@ -26,11 +26,11 @@
 	</header> 
 
 	<div id="main">
-		<h1>Amtrak Time Table Redesign</h1>
+		<h1>piggybank iphone app</h1>
 		<br>
-		<img class="Train-img" src="images/LargeImages/TrainTable.jpg" alt="DouglasMonteiro">
+		<img class="Train-img" src="images/LargeImages/AppPreview.jpg" alt="DouglasMonteiro">
 		<div id="body-text">
-			  <p>Subject to the Contributor who includes the Program by such Participant to You under this License Agreement. Any attempt otherwise to copy, distribute or change NetHack. <span id="small-caps">COPYING POLICIES</span> You may not alter or restrict the applicable version of this License shall be construed under the LPPL maintenance status 'maintained'.</p>
+			  <p>Subject to the Contributor who includes the Program by such Participant to You under this License Agreement. Any attempt otherwise to copy, distribute or change NetHack. You may not alter or restrict the applicable version of this License shall be construed under the LPPL maintenance status 'maintained'.</p>
 
 		</div>
 	</div>
