--- a/final/PortfolioAllure.html
+++ b/final/PortfolioAllure.html
@@ -29,8 +29,8 @@
 		<h1>Allure</h1>
 		<br>
 		<img class="Allure-img" src="images/LargeImages/Allure1.jpg" alt="DouglasMonteiro">
-		<img class="Allure-img" src="images/LargeImages/Allure2.jpg" alt="DouglasMonteiro">
-		<img class="Allure-img" src="images/LargeImages/Allure3.jpg" alt="DouglasMonteiro">
+		<img class="Allure-img" src="images/LargeImages/Allure2.JPG" alt="DouglasMonteiro">
+		<img class="Allure-img" src="images/LargeImages/Allure3.JPG" alt="DouglasMonteiro">
 		<img class="Allure-img" src="images/LargeImages/Allure4.jpg" alt="DouglasMonteiro">
 		<div id="body-text">
 			
