Endangered Species Stamps
Endangered Species Stamps

--- a/final/PortfolioStamps.html
+++ b/final/PortfolioStamps.html
@@ -26,7 +26,7 @@
 	</header> 
 
 	<div id="main">
-		<h1>Amtrak Time Table Redesign</h1>
+		<h1>Endangered Species Stamps</h1>
 		<br>
 		<img class="Allure-img" src="images/LargeImages/Stamps.jpg" alt="DouglasMonteiro">
 		<div id="body-text">
